Move to java based caps/reqs

--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.fuse.cidpoc</groupId>
-        <artifactId>parent</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <groupId>org.jboss.cidpoc</groupId>
+        <artifactId>cidpoc-parent</artifactId>
+        <version>1.0.0.Alpha1</version>
     </parent>
 
     <artifactId>projC</artifactId>
@@ -17,12 +17,12 @@
     </scm>
     
     <properties>
-        <version.cidpoc.a>1.0.0-SNAPSHOT</version.cidpoc.a>
+        <version.cidpoc.a>1.0.0</version.cidpoc.a>
     </properties>
 
     <dependencies>
         <dependency>
-            <groupId>org.fuse.cidpoc</groupId>
+            <groupId>org.jboss.cidpoc</groupId>
             <artifactId>projA</artifactId>
             <version>${version.cidpoc.a}</version>
         </dependency>
@@ -42,4 +42,12 @@
         </resources>
     </build>
 
+    <!-- Repositories -->
+    <repositories>
+        <repository>
+            <id>jboss-releases</id>
+            <url>https://repository.jboss.org/nexus/content/repositories/releases/</url>
+        </repository>
+    </repositories>
+    
 </project>
