--- a/pom.xml
+++ b/pom.xml
@@ -11,13 +11,14 @@
     <version>1.0.0-SNAPSHOT</version>
 
     <scm>
-        <connection>scm:git:https://github.com/tdiesler/cidpocC</connection>
-        <developerConnection>scm:git:https://github.com/tdiesler/cidpocC.git</developerConnection>
-        <url>http://github.com/tdiesler/cidpocC</url>
-    </scm>
+        <connection>scm:git:https://github.com/FuseCID/cidpocC</connection>
+        <developerConnection>scm:git:https://github.com/FuseCID/cidpocC.git</developerConnection>
+        <url>http://github.com/FuseCID/cidpocC</url>
+      <tag>HEAD</tag>
+  </scm>
     
     <properties>
-        <version.cidpoc.a>1.0.0</version.cidpoc.a>
+        <version.cidpoc.a>1.0.0-SNAPSHOT</version.cidpoc.a>
     </properties>
 
     <dependencies>
