--- a/pom.xml
+++ b/pom.xml
@@ -8,13 +8,13 @@
     </parent>
 
     <artifactId>projC</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
 
     <scm>
         <connection>scm:git:https://github.com/FuseCID/cidpocC</connection>
         <developerConnection>scm:git:https://github.com/FuseCID/cidpocC.git</developerConnection>
         <url>http://github.com/FuseCID/cidpocC</url>
-      <tag>HEAD</tag>
+      <tag>1.0.0</tag>
   </scm>
     
     <properties>
