Upgrade to cidpoc-1.0.0.Beta1

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.jboss.cidpoc</groupId>
         <artifactId>cidpoc-parent</artifactId>
-        <version>1.0.0.Alpha1</version>
+        <version>1.0.0.Beta1</version>
     </parent>
 
     <artifactId>projC</artifactId>
